--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </div>
     </div>
     <div class="buttons">
-      <a href="tinytoolbox.zip" download>Download TinyToolbox</a>
+      <a href="tinytoolbox.py" download>Download Open Source</a>
       <a href="https://github.com/CevorLabs/TinyToolBox" target="_blank">Visit GitHub</a>
     </div>
   </div>
