--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
     <div class="buttons">
       <a href="https://github.com/CevorLabs/TinyToolBox/releases" target="_blank">Download</a>
-      <a href="tinytoolbox.py" download>Download Open Source</a>
+      <a href="TinyToolbox.zip" download>Download Open Source</a>
       <a href="https://github.com/CevorLabs/TinyToolBox" target="_blank">Visit GitHub</a>
     </div>
   </div>
