download-opensource.html

--- a/download-opensource.html
+++ b/download-opensource.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TinyToolBox Redirect</title>
-    <meta http-equiv="refresh" content="3;url=https://github.com/CevorLabs/TinyToolBox">
+    <meta http-equiv="refresh" content="3;url=https://github.com/CevorLabs/TinyToolBox/archive/refs/heads/main.zip">
 </head>
 <body>
     <h1>Redirecting to TinyToolBox Releases...</h1>
-    <p>If you are not redirected automatically, <a href="https://github.com/CevorLabs/TinyToolBox">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://github.com/CevorLabs/TinyToolBox/archive/refs/heads/main.zip">click here</a>.</p>
 </body>
 </html>
