--- a/download-opensource.html
+++ b/download-opensource.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="3;url=https://github.com/CevorLabs/TinyToolBox/archive/refs/heads/main.zip">
 </head>
 <body>
-    <h1>Redirecting to TinyToolBox Releases...</h1>
+    <h1>Redirecting to TinyToolBox Open Source</h1>
     <p>If you are not redirected automatically, <a href="https://github.com/CevorLabs/TinyToolBox/archive/refs/heads/main.zip">click here</a>.</p>
 </body>
 </html>
