--- a/index.html
+++ b/index.html
@@ -178,23 +178,23 @@
       </div>
       <div class="feature">
         <h2>File & System Utilities</h2>
-        <p>Rename multiple files, find and delete duplicates, and get system info (RAM, CPU, OS details).</p>
+        <p>Rename multiple files, find and delete duplicates, get system info (RAM, CPU, OS details), search files, calculate file size, and count file types.</p>
       </div>
       <div class="feature">
         <h2>Internet Tools</h2>
-        <p>Ping websites, get IP address & geolocation info, shorten/expand URLs, and check if a website is online.</p>
+        <p>Ping websites, get IP address & geolocation info, shorten/expand URLs, download files, and check weather.</p>
       </div>
       <div class="feature">
         <h2>Security & Encryption</h2>
-        <p>Generate random passwords, encrypt/decrypt text (AES, Base64), and hash files (SHA256, MD5).</p>
+        <p>Generate random passwords, encrypt/decrypt text (AES, Base64), hash files (SHA256, MD5), generate SSH keys, check password strength, and encrypt/decrypt files.</p>
       </div>
       <div class="feature">
         <h2>Conversion Tools</h2>
-        <p>Convert images (JPG ↔ PNG ↔ WEBP), units (length, weight, temperature, currency), and numbers (binary ↔ decimal ↔ hex).</p>
+        <p>Convert images (JPG ↔ PNG ↔ WEBP), units (length, weight, temperature, currency), numbers (binary ↔ decimal ↔ hex), timezones, and text to speech.</p>
       </div>
       <div class="feature">
         <h2>Productivity & Misc</h2>
-        <p>Manage to-do lists, generate QR codes, roll dice, flip coins, and more!</p>
+        <p>Manage to-do lists, generate QR codes, roll dice, flip coins, countdown timer, stopwatch, random number generator, and Base64 encode/decode.</p>
       </div>
     </div>
     <div class="buttons">
